bug_follow_options_z-index

--- a/styles.css
+++ b/styles.css
@@ -1903,6 +1903,7 @@ body{
     align-items: center;
     justify-content: center;
     transition: 0.1s;
+    z-index: 300;
 }
 
 #followContainer.visible{
